--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "medusa-react": "^4.0.4",
     "next": "^12.2.0",
+    "next-translate": "^2.0.5",
     "react": "17.0.2",
     "react-country-flag": "^3.0.2",
     "react-dom": "17.0.2",
@@ -52,6 +53,7 @@
     "cypress": "^9.5.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "next-translate-plugin": "^2.0.5",
     "postcss": "^8.4.8",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
